# breathehr-mcp

./: .env.example  .gitignore  README.md  claude_desktop_config.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: test.yml
breathe_hr_mcp/: __init__.py  __main__.py  server.py
scripts/: generate-cursor-link.js  print_mcp_routes.py  validate-configs.py
tests/: test_server.py
